# django-openauth

./: .editorconfig  .gitignore  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  test_settings.py
openauth/: apps.py  views.py
uniauth/: __init__.py  apps.py  settings.py  urls.py  views.py
uniauth/migrations/: 0001_initial.py  0002_auto_20191128_1629.py
