[metadata]
name = django-uniauth
version = 0.1
description =  统一认证平台的 django 插件
long_description = file: README.rst
url = https://github.com/daimon99/django-uniauth
author = Jian Dai
author_email = daijian1@qq.com
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0 License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
